# poetry-audit-plugin

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
poetry_audit_plugin/: command.py  errors.py  safety.py
tests/: test_main.py
tests/assets/no_vulnerabilities_project/: pyproject.toml
tests/assets/no_vulnerabilities_tool_poetry/: pyproject.toml
tests/assets/vulnerabilities_in_dev_project/: pyproject.toml
tests/assets/vulnerabilities_in_dev_tool_poetry/: pyproject.toml
tests/assets/vulnerabilities_in_main_dev_project/: pyproject.toml
tests/assets/vulnerabilities_in_main_project/: pyproject.toml
