[project]
name = "poetry-audit-plugin"
version = "1.0.0"
description = "Poetry plugin for checking security vulnerabilities in dependencies"
authors = [{ name = "opeco17", email = "opeco17@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9,<4.0"
repository = "https://github.com/opeco17/poetry-audit-plugin"
dependencies = [
    "poetry>=2.0.0,<3.0.0",
    "poetry-core>=2.0.0,<3.0.0",
    "safety>=3.0.0,<4.0.0",
    "packaging>=21.0"
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License"
]
keywords = ["poetry", "vulnerabilities", "security", "audit"]

[project.entry-points."poetry.application.plugin"]
audit = "poetry_audit_plugin.plugin:AuditApplicationPlugin"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "poetry_audit_plugin" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
black = "^24.0.0"
isort = "^5.13.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
