[project]
name = "vulnerabilities-in-main"
version = "0.1.0"
description = ""
authors = [{ name = "opeco17", email = "opeco17@gmail.com" }]
readme = "README.md"
packages = [{include = "vulnerabilities_in_main"}]
requires-python = ">=3.7,<4.0"
dependencies = [
    "ansible-tower-cli<3.2.0"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
